# lab_arch

./: CMakeLists.txt  consumer.cpp  consumer.hpp  main.cpp  producer.cpp  producer.hpp  task_queue.cpp  task_queue.hpp
